--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mapbox/geojsonhint": "^2.0.1",
     "@turf/difference": "^5.1.5",
+    "@turf/helpers": "^6.0.0-beta.3",
     "turf-reverse": "^1.0.0",
     "yargs": "^10.1.1"
   },
