--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "yargs": "^10.1.1"
   },
   "devDependencies": {
+    "@turf/boolean-equal": "^5.1.5",
     "jest": "^22.0.6",
     "stream-to-string": "^1.1.0",
     "string-to-stream": "^1.1.0"
