--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "yargs": "^10.1.1"
   },
   "devDependencies": {
-    "@turf/boolean-equal": "^5.1.5",
+    "geojson-equality": "^0.1.7",
     "jest": "^22.0.6",
     "stream-to-string": "^1.1.0"
   }
