--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@mapbox/geojsonhint": "^2.0.1",
     "@turf/difference": "^5.1.5",
     "@turf/helpers": "^6.0.0-beta.3",
-    "turf-reverse": "^1.0.0",
+    "@turf/rewind": "^5.1.5",
     "yargs": "^10.1.1"
   },
   "devDependencies": {
+    "@turf/boolean-clockwise": "^5.1.5",
     "geojson-equality": "^0.1.7",
     "jest": "^22.0.6",
     "stream-to-string": "^1.1.0"
