--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   "dependencies": {
     "@mapbox/geojsonhint": "^2.0.1",
     "@turf/bbox": "^5.1.5",
-    "@turf/difference": "^5.1.5",
     "@turf/helpers": "^6.0.0-beta.3",
-    "@turf/rewind": "^5.1.5",
+    "martinez-polygon-clipping": "^0.3.3",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
