--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test-debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
   "jest": {
+    "collectCoverage": true,
     "testEnvironment": "node"
   },
   "keywords": [
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@turf/boolean-clockwise": "^5.1.5",
+    "coveralls": "^3.0.0",
     "geojson-equality": "^0.2.0",
     "jest": "^22.1.4",
     "stream-to-string": "^1.1.0"
