--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@mapbox/geojsonhint": "^2.0.1",
     "@turf/bbox": "^5.1.5",
     "@turf/helpers": "^6.0.0-beta.3",
-    "polygon-clipping": "git://github.com/mfogel/polygon-clipping.git#polygon-clipping",
+    "polygon-clipping": "^0.4.0",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
